syntax = "proto3";

package org.project_planton.provider.digitalocean.digitaloceanvpc.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/digitalocean/digitaloceanvpc/v1/spec.proto";
import "org/project_planton/provider/digitalocean/digitaloceanvpc/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

// digital-ocean-vpc
message DigitalOceanVpc {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = "digital-ocean.project-planton.org/v1"];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = "DigitalOceanVpc"];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  DigitalOceanVpcSpec spec = 4 [(buf.validate.field).required = true];

  //status
  DigitalOceanVpcStatus status = 5;
}

// digital-ocean-vpc status
message DigitalOceanVpcStatus {
  //stack-outputs
  //  digital-ocean-vpc stack-outputs
  DigitalOceanVpcStackOutputs outputs = 1;
}
